# libepaper

./: .clang-tidy  .clangd  .gitignore  ARCHITECTURE_VISUAL_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT_ARCHITECTURE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_OVERVIEW.md  Doxyfile  LICENSE  README.md
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_QUICK_REFERENCE.md  ARCHITECTURE_VISUAL_SUMMARY.md  BITMAP_DRAWING.md  BITMAP_IMPLEMENTATION_SUMMARY.md  BITMAP_QUICK_REFERENCE.md  DOCUMENTATION_INDEX.md  DRIVER.md  MIGRATION_PLAN.md  README.md  RUST_MIGRATION_ANALYSIS.md  RUST_MIGRATION_EXAMPLES.md  TEST_IMAGES_GUIDE.md  TEST_IMAGES_SUMMARY.md
examples/: CMAKE_DEPENDENCIES.md  CMakeLists.txt  CRYPTO_DASHBOARD_README.md  README.md  bitmap_example.cpp  crypto_dashboard.cpp  demo.cpp  generate_test_images.py  run_crypto_dashboard.sh  wallets.json.example
examples/bmp_debug_example/: CMakeLists.txt  README.md
examples/bmp_debug_example/src/: main.cpp
examples/crypto_dashboard/: CMakeLists.txt  README.md  wallets.json.example
examples/crypto_dashboard/include/: crypto_api.hpp  dashboard_renderer.hpp  http_client.hpp  types.hpp  wallet_config.hpp
examples/crypto_dashboard/src/: crypto_api.cpp  dashboard_renderer.cpp  http_client.cpp  main.cpp  types.cpp  wallet_config.cpp
examples/images/: README.md
examples/recovery/: CMakeLists.txt  main.cpp
examples/save_buffer_to_image/: CMakeLists.txt  README.md
examples/save_buffer_to_image/src/: main.cpp
include/epaper/: device.hpp  display.hpp  draw.hpp  errors.hpp  font.hpp  framebuffer.hpp  geometry.hpp  screen.hpp
include/epaper/color/: color.hpp  color_manager.hpp  device_color.hpp
include/epaper/core/: device.hpp  display.hpp  errors.hpp  framebuffer.hpp  framebuffer_concepts.hpp  geometry.hpp  types.hpp
include/epaper/draw/: builders.hpp  commands.hpp  styles.hpp
include/epaper/drivers/: capabilities.hpp  driver.hpp  driver_concepts.hpp  epd27.hpp  mock_driver.hpp
include/epaper/graphics/: font.hpp  graphics.hpp  pixel_codec.hpp
include/epaper/hal/: gpio.hpp  mock_delay.hpp  mock_pin.hpp  mock_spi.hpp  spi.hpp
include/epaper/internal/: internal.hpp
include/epaper/io/: image_io.hpp
src/: device.cpp  display.cpp  draw.cpp  font.cpp  image_io.cpp  screen.cpp
src/drivers/: epd27.cpp
src/framebuffers/: mono_framebuffer.cpp  multi_plane_framebuffer.cpp
tests/: CMakeLists.txt  README.md  run_all_tests.sh  test_auto_sleep.cpp  test_bitmaps.cpp  test_capabilities.cpp  test_color_management.cpp  test_config.hpp  test_coordinate_transforms.cpp  test_display_modes.cpp  test_drawing_primitives.cpp  test_edge_cases.cpp  test_error_handling.cpp  test_final.cpp  test_fonts.cpp  test_mock_color_modes.cpp  test_orientations.cpp  test_power_management.cpp  test_pure_mock_hal.cpp  test_stress.cpp  test_styles.cpp
